hphp/hack/test/typecheck/method_call_inference/intersection_receiver_calls.php.exp
File "intersection_receiver_calls.php", line 22, characters 5-15:
  (C & A)
File "intersection_receiver_calls.php", line 24, characters 5-15:
  B
File "intersection_receiver_calls.php", line 29, characters 5-15:
  (D & A)
File "intersection_receiver_calls.php", line 31, characters 5-21:
  (B & C)
File "intersection_receiver_calls.php", line 36, characters 5-15:
  ?(C & A)
File "intersection_receiver_calls.php", line 38, characters 5-15:
  ?B
File "intersection_receiver_calls.php", line 43, characters 5-15:
  ?(D & A)
File "intersection_receiver_calls.php", line 45, characters 5-21:
  ?(B & C)
File "intersection_receiver_calls.php", line 50, characters 5-15:
  ?(D & A)
File "intersection_receiver_calls.php", line 61, characters 5-23:
  (dynamic & B)
File "intersection_receiver_calls.php", line 67, characters 5-23:
  ((dynamic & null) | (dynamic & B))
File "intersection_receiver_calls.php", line 51, characters 20-25:
You are trying to access the method `x_to_y` but this object can be null. (Typing[4064])
File "intersection_receiver_calls.php", line 48, characters 51-52:
This can be null
